# omi_weather_forecast

./: README.md
omi_weather_forecast_nextjs/: package.json
omi_weather_forecast_nextjs/src/app/api/weather/: route.ts  status.ts  utils.ts  webhook.ts  webhook_setup_status.ts
omi_weather_forecast_python/: Procfile  pyproject.toml  requirements.txt
omi_weather_forecast_python/omi_weather_forecast/: drinking_omi.py  weather_omi.py
