[tool.poetry]
name = "omi-weather-forecast"
version = "0.1.0"
description = ""
authors = ["Tobias Leinß <tobias@leinss.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
requests = "^2.32.3"
openai = "^1.55.3"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather-omi = "omi_weather_forecast.weather_omi:app"
